Fix CustomCDNOSS paddings, gaps

--- a/src/public/less/pages/custom-cdn-oss.less
+++ b/src/public/less/pages/custom-cdn-oss.less
@@ -8,11 +8,13 @@
 	-webkit-font-smoothing: antialiased;
 	display: flex;
 	flex-direction: column;
+	row-gap: 40px;
 	align-items: center;
 	padding: 40px 0 0;
 
 	@media (min-width: @screen-sm-min) {
 		padding: 32px 0 0;
+		row-gap: 80px;
 	}
 
 	.content-wrapper {
@@ -25,27 +27,16 @@
 		display: flex;
 		justify-content: center;
 		width: 100%;
-		padding: 40px 0 0;
+		padding: 40px 0;
 		background: #f9fafb;
-		margin-bottom: 40px;
 
 		@media (min-width: @screen-sm-min) {
-			margin-bottom: 80px;
 			padding: 80px 0;
-			height: 504px;
 		}
 	}
 
 	.cdn-oss-item {
 		width: 100%;
-
-		&:not(:nth-child(2)) {
-			margin-bottom: 40px;
-
-			@media (min-width: @screen-sm-min) {
-				margin-bottom: 80px;
-			}
-		}
 
 		.c-cdn-oss-head {
 			margin-bottom: 40px;
@@ -76,10 +67,10 @@
 	.divider {
 		height: 1px;
 		background: #dfe3e7;
-		margin: 0 0 40px;
+		margin: 40px 0;
 
 		@media (min-width: @screen-sm-min) {
-			margin: 0 0 80px;
+			margin: 80px 0;
 		}
 	}
 }
